@@ -1,5 +1,6 @@
 From version 0.2.1 to 0.2.2
 - introduction of cgi control interface.
+- server "state" support and use of state.xml config to set state properties.
 
 From version 0.2.0 to 0.2.1
 - integrated debug/memleak detection, used to start gdb or valgrind for
